--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,10 +1,5 @@
-/*
- * === Header style ===
- */
-
-/* Header style */
 header {
-    background-color: #f00;
+    background-color: red;
     height: 70px;
     width: 100%;
-  }
+}
