--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,20 +1,17 @@
-/*
- * === Global style ===
- */
-
-/* Body style */
 body {
+    margin: 0px;
+    padding: 0px;
     color: #484848;
-    font: 14px Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  }
-  
-  /* Container style */
-  .container {
-    margin: 30px auto;
+    font-size: 14px;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+.container {
     max-width: 1000px;
-  }
-  
-  /* Strong style */
-  strong {
-    font-weight: bold;
-  }
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+html {
+    position: relative;
+}
