--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,11 +1,15 @@
 header {
+    width: 100%;
     background-color: white;
     height: 70px;
-    width: 100%;
     border-bottom: 1px solid #CCCCCC;
-    background-image: url(../images/logo.png);
-    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
 }
-header.logo {
-    margin-left: 20px;
+
+.logo {
+    width: 142px;
+    height: 60px;
+    background: url("../images/logo.png") no-repeat center;
+    padding-left: 20px;
 }
