--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -4,48 +4,45 @@
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    position: relative;
     display: flex;
+    justify-content: flex-start;
     align-items: center;
-    
 }
-.filters button {
+
+section.filters button{
     font-size: 18px;
+    color: white;
     background-color: #FF5A5F;
-    color: #FFFFFF;
     height: 48px;
-    width: 20%;
     border: 0px;
     border-radius: 4px;
-    align-content: center;
-    right: 30px;
-    top: 15%;
-    position: absolute;
+    width: 20%;
+    margin-left: auto;
+    margin-right: 30px;
+    opacity: 1;
 }
-.filters button:hover {
-    opacity: 90%;
+
+section.filters button:hover {
+    opacity: 0.9;
 }
-.locations .amenities {
+
+.locations, .amenities {
     height: 100%;
     width: 25%;
-    display: inline-block;
-    top: 0%;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
+    padding-left: 50px;
 }
+
 .locations {
     border-right: 1px solid #DDDDDD;
 }
 
-.filters h3 {
-    top: 15%;
+.locations h3, .amenities h3 {
     font-weight: 600;
-    margin: 2px 20px;
+    margin: 12px 0 5px 0;
 }
-.filters h4 {
-    top: 15%;
+
+.locations h4, .amenities h4 {
     font-weight: 400;
     font-size: 14px;
-    margin: 2px 20px;
+    margin: 0 0 0 0;
 }
