--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -4,89 +4,88 @@
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    position: relative;
     display: flex;
     align-items: center;
-    
-}
-.filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: 0px;
-    border-radius: 4px;
-    right: 30px;
-    top: 15%;
-    position: absolute;
-}
-.filters button:hover {
-    opacity: 90%;
 }
 
-.filters>.locations, .filters>.amenities {
+section.filters > button{
+    font-size: 18px;
+    color: white;
+    background-color: #FF5A5F;
+    height: 48px;
+    border: 0px;
+    border-radius: 4px;
+    width: 20%;
+    margin-left: auto;
+    margin-right: 30px;
+    opacity: 1;
+}
+
+section.filters > button:hover {
+    opacity: 0.9;
+}
+
+.locations, .amenities {
     height: 100%;
     width: 25%;
-    padding: 15px, 40px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    padding-left: 50px;
 }
+
 .locations {
     border-right: 1px solid #DDDDDD;
 }
-.filters h3 {
+.locations > h3, .amenities > h3 {
     font-weight: 600;
-    margin: 2px 20px;
+    margin: 12px 0 5px 0;
 }
-.filters h4 {
+
+.locations > h4, .amenities > h4 {
     font-weight: 400;
     font-size: 14px;
-    margin: 2px 20px;
+    margin: 0 0 5px 0;
 }
+
 .popover {
+    display: none;
+    position: relative;
+    left: -51px;
     background-color: #FAFAFA;
+    width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    display: none;
-    top: 100%;
-    position: absolute;
-    left: 0;
-    width: 250px;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 20px;
-    list-style: none;
-    
+    z-index: 1;
+    padding: 30px 50px 30px 0;
+    margin-top: 17px;
 }
 
-div:hover > .popover {
-    display: block;
-    cursor: pointer;
-}
-
-.popover ul {
+.popover, .popover ul {
     list-style-type: none;
 }
-
-.popover h2 {
-    font-size: 16px;
-}
-
-.popover li {
-    margin: 10px 0px 5px 0px; 
-    list-style: none;
-    padding-left: 20px;
-    display: block;
-    grid-row-gap: 4px;
-}
-
 .locations:hover > .popover {
-display: block;
+    display: block;
 }
 
 .amenities:hover > .popover {
     display: block;
+}
+
+.popover h2 {
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
+.locations > .popover > li {
+    margin-bottom: 30px;
+    margin-left: 30px;
+}
+.locations > .popover > li > ul {
+    padding-left: 20px;
+}
+.locations > .popover > li > ul > li {
+    margin-bottom: 10px;
+}
+
+.amenities > .popover > li {
+    margin-left: 50px;
+    margin-bottom: 10px;
 }
